Fix spacing for subtitle

--- a/src/components/subtitle.scss
+++ b/src/components/subtitle.scss
@@ -4,7 +4,7 @@
   color: map-get($colors, black);
   height: 4rem;
   line-height: 4rem;
-  margin: 0;
+  margin: 4rem 0 2rem 0;
   padding: .2rem 0 .8rem 0;
   text-transform: uppercase;
 }
